# quater

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent-skills/: README.md
agent-skills/quater-apps/: SKILL.md
agent-skills/quater-apps/agents/: openai.yaml
agent-skills/quater-apps/references/: auth.md  cli-actions.md  mcp.md  safety.md
agent-skills/quater-framework/: SKILL.md
agent-skills/quater-framework/agents/: openai.yaml
agent-skills/quater-framework/references/: app-patterns.md  deployment.md  resources-testing.md  surfaces.md
benchmarks/: README.md  docker-compose.yml
benchmarks/apps/: db_fastapi.py  db_quater.py  no_db_fastapi.py  no_db_quater.py
benchmarks/scripts/: generate_charts.py  run_suite.py
docs/: api.md  index.md  mcp.md  quickstart.md  security.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/en/dev/: actions.md  api.md  auth-model.md  changelog.md  contributing.md  deployment.md  index.md  known-limitations.md  mcp.md  middleware-errors.md  quickstart.md  resources.md  routes-handlers.md  security.md  stability.md  surfaces.md  testing.md  (+1 more)
docs/public/: robots.txt
examples/: __init__.py  asgi_compat.py  auth_and_mcp.py  basic_app.py
release/: 0.1.0a1.md
scripts/: build-docs-site.mjs  generate_reference.py  snapshot-docs-version.mjs
src/quater/: __init__.py  _api_boundary.py  _finalize.py  _parameters.py  _route_definition.py  _router.pyi  _state.py  app.py  auth.py  config.py  cookies.py  core.py  cors.py  datastructures.py  dependencies.py  deployment.py  exceptions.py  groups.py  lifespan.py  middleware.py  observability.py  params.py  request.py  response.py  router.py  routing.py  schema.py  security.py  serialization.py  testing.py  types.py  typing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_action_protocol.py  test_asgi_adapter.py  test_auth_per_surface.py  test_body_default_parity.py  test_cross_surface_parity.py  test_cross_transport_behavior.py  test_examples_run.py  test_mcp_audit.py  test_mcp_auth_and_origin.py  test_mcp_docs.py  test_mcp_lifecycle.py  test_mcp_tools_call.py  test_mcp_tools_list.py  test_openapi_docs.py  test_resource_database_async.py  test_resource_database_surfaces.py  test_resource_database_sync.py  test_rsgi_adapter.py  test_wsgi_adapter.py
tests/security/: helpers.py  test_auth_fail_closed.py  test_cross_surface_exposure.py  test_request_and_error_safety.py  test_request_context_isolation.py  test_router_path_safety.py
tests/support/: __init__.py  database.py
tests/typing/: public_api.py  test_action_types.py  test_adapter_types.py  test_auth_types.py  test_mcp_types.py  test_middleware_types.py  test_public_app_api.py  test_quickstart_types.py  test_request_response_types.py  test_resource_types.py  test_route_decorator_types.py  test_test_client_types.py
tests/unit/: test_action_executor.py  test_action_protocol_payloads.py  test_action_registry.py  test_adapter_shared.py  test_allowed_hosts.py  test_app_config.py  test_auth_hook.py  test_body_limits.py  test_body_reading.py  test_cors_policy.py  test_datastructures.py  test_debug_error_responses.py  test_deployment.py  test_exception_handling.py  test_exceptions.py  test_form_file_binding.py  test_formdata_parsing.py  test_handler_binding.py  test_lifespan.py  test_middleware_order.py  test_middleware_short_circuit.py  test_observability.py  test_parameter_markers.py  test_public_package_surface.py  test_query_and_body_binding.py  test_request_lazy_parsing.py  test_request_resource_scope.py  test_resource_dependencies.py  test_resource_injection.py  test_response_finalizers.py  test_response_serialization.py  test_route_conflicts.py  test_route_group.py  test_route_parsing.py  test_router_matching.py  test_secure_headers.py  test_signed_cookies.py  test_state.py  test_test_client.py  test_tool_registry.py  (+1 more)
(+72 files in other folders)
