[package]
name = "router"
version = "0.1.0"
edition = "2021"
description = "Native route matcher for Quater."
license = "MIT"
homepage = "https://github.com/DevilsAutumn/quater"
repository = "https://github.com/DevilsAutumn/quater"

[lib]
name = "quater_router"
path = "native/router/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
matchit = "0.9.1"
pyo3 = { version = "0.28.3", features = ["abi3-py311", "extension-module"] }
