[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quater"
version = "0.1.0"
description = "The Python framework for APIs that humans use and agents can safely operate."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Bhuvnesh Sharma", email = "bhuvnesh875@gmail.com" },
]
keywords = ["api", "async", "granian", "rsgi", "mcp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "granian>=2.0",
  "msgspec>=0.18",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quater = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".uv-cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
