[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "quater"
version = "0.1.0a1"
description = "The Python framework for APIs that humans use and agents can safely operate."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Bhuvnesh Sharma", email = "bhuvnesh875@gmail.com" },
]
keywords = ["api", "async", "granian", "rsgi", "mcp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "granian[reload]>=2.0",
  "msgspec>=0.18",
  "swagger-ui-bundle>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/DevilsAutumn/quater"
Repository = "https://github.com/DevilsAutumn/quater"
Issues = "https://github.com/DevilsAutumn/quater/issues"

[project.scripts]
quater = "quater.cli.main:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "maturin>=1.11,<2.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]
release = [
  "twine>=6.0",
]

[tool.uv]
required-version = ">=0.7.8"

[tool.maturin]
python-source = "src"
module-name = "quater._router"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".uv-cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
